--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.uri=mongodb+srv://hemantbhatt:hemant%4071465@cluster0.xfmbldg.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=books
-//spring.data.mongodb.port=27017
+spring.data.mongodb.port=27017
+server.port=8083
